# fractal-art-cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  make.sh
headers/: Animation.hpp  ArgParser.hpp  Complex.hpp  Const.hpp  Fractal.hpp  Geometry.hpp  Render.hpp
src/: Animation.cpp  Fractal.cpp  Main.cpp  Render.cpp
